# MatchProb

./: .gitignore  README.md  index.html  manifest.json  pyproject.toml  style.css  sw.js
js/: app.js  chart.js  linalg.js  markov.js  pbp.js  rules.js  state.js
matchprob/: __init__.py  app.py  markov.py  montecarlo.py  pbp.py  rules.py  state.py
tests/: test_markov.py  test_montecarlo.py  test_pbp.py  test_rules.py
