[project]
name = "matchprob"
version = "0.1.0"
description = "Tennis match probability calculator using Markov chains"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "streamlit>=1.30",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
