[project]
name = "matchprob"
version = "0.1.0"
description = "Tennis match probability calculator using Markov chains"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "streamlit>=1.30",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"
